--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "JATE",
+  "name": "just-another-text-editor",
   "version": "1.0.0",
-  "description": "",
+  "engines:": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
+  },
+  "description": "just another text editor",
   "main": "server.js",
   "scripts": {
-    "develop": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
